# CLAIRE-KG-Docker

./: .dockerignore  .env.example  .gitignore  CLAIRE-KG-Docker-Implementation.md  Dockerfile  README.md  VERSION  ask  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: build-push.yml
docker/: neo4j-entrypoint.sh
scripts/: fetch-dump.sh
src/claire_kg/: __init__.py  __main__.py  cli.py  curated_schema_builder.py  cypher_generator.py  database.py  dataset_metadata.py  evaluator.py  ingest.py  llm_orchestrator.py  query_orchestrator.py  query_validator.py  question_classifier.py  rag_search.py  runner.py  schema_knowledge.py
src/claire_kg/archive/: README.md  debug_system.py  llm_orchestrator.py.archived  orchestrator.py  vocab.py
